Make the centered template for calculator on the page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
     <title>Odin Calculator</title>
   </head>
-  <body></body>
+  <body>
+    <div></div>
+    <div id="calculator">
+      <div id="disaply"></div>
+      <div id="buttons">
+        <div id="numbers"></div>
+        <div id="operations"></div>
+      </div>
+    </div>
+    <div></div>
+  </body>
 </html>
