--- a/index.html
+++ b/index.html
@@ -8,14 +8,34 @@
     <title>Odin Calculator</title>
   </head>
   <body>
-    <div></div>
     <div id="calculator">
-      <div id="disaply"></div>
+      <div id="display">
+        <div id="current-result"></div>
+        <div id="expression"></div>
+      </div>
       <div id="buttons">
-        <div id="numbers"></div>
+        <div id="numbers">
+          <div class="numbers-row">
+            <button class="number-button" id="button-1">1</button>
+            <button class="number-button" id="button-2">2</button>
+            <button class="number-button" id="button-3">3</button>
+          </div>
+          <div class="numbers-row">
+            <button class="number-button" id="button-4">4</button>
+            <button class="number-button" id="button-5">5</button>
+            <button class="number-button" id="button-6">6</button>
+          </div>
+          <div class="numbers-row">
+            <button class="number-button" id="button-7">7</button>
+            <button class="number-button" id="button-8">8</button>
+            <button class="number-button" id="button-9">9</button>
+          </div>
+          <div class="numbers-row">
+            <button class="number-button" id="button-0">0</button>
+          </div>
+        </div>
         <div id="operations"></div>
       </div>
     </div>
-    <div></div>
   </body>
 </html>
