Make a styling for entire calculator
More styling needs to be applied later

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div id="calculator">
       <div id="display">
-        <div id="current-result"></div>
-        <div id="expression"></div>
+        <div id="current-result">57</div>
+        <div id="expression">37+20</div>
       </div>
       <div id="buttons">
         <div id="numbers">
@@ -34,7 +34,17 @@
             <button class="number-button" id="button-0">0</button>
           </div>
         </div>
-        <div id="operations"></div>
+        <div id="operations">
+          <div class="operations-column">
+            <button class="operation-button" id="button-add">+</button>
+            <button class="operation-button" id="button-subtract">-</button>
+            <button class="operation-button" id="button-multiply">x</button>
+            <button class="operation-button" id="button-divide">/</button>
+          </div>
+          <div class="operations-column">
+            <button class="operation-button" id="button-equal">=</button>
+          </div>
+        </div>
       </div>
     </div>
   </body>
