Create a function to populate the display

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <body>
     <div id="calculator">
       <div id="display">
-        <div id="current-result">57</div>
-        <div id="expression">37+20</div>
+        <div id="expression"></div>
       </div>
       <div id="buttons">
         <div id="numbers">
