Make the buttons logic for calculator disaply and calculatios

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="calculator">
       <div id="display">
-        <div id="expression"></div>
+        <div id="expression">0</div>
       </div>
       <div id="buttons">
         <div id="numbers">
