--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           </div>
           <div class="operations-column">
             <button class="operation-button" id="button-equal">=</button>
+            <button class="operation-button" id="button-cancel">C</button>
           </div>
         </div>
       </div>
